fix(theme): navbar overlap
increase z-index for navbar so that it does not overlap with the clipboard icon

closes MBP-541

--- a/packages/manager/apps/public-cloud/src/assets/theme/_navbar.less
+++ b/packages/manager/apps/public-cloud/src/assets/theme/_navbar.less
@@ -8,7 +8,7 @@
 .oui-navbar {
   background-color: #fff;
   box-shadow: 0 2pt 4pt rgba(17, 63, 109, 0.15);
-  z-index: 2;
+  z-index: 3;
 
   .oui-navbar__brand {
     color: rgb(40, 89, 192);
